--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Limitecia's Blog|HAKUNA MATATA #Your awesome title
+title: Limitecia's |HAKUNA MATATA #Your awesome title
 email: 1147826746@qq.com #youremail@domain.com
 description:  > # this means to ignore newlines until "baseurl"
 baseurl: # the subpath of the site
@@ -16,10 +16,10 @@ cusdis:
     app_id: #your cusdis app_id
 
 user:
-  name: Limitecia's Blog
+  name: Limitecia
   pic: /assets/img/pikaqiu.jpg
   picAlt: "Limitecia"
-  job: Limitecia who?
+  job: 
   aboutme: true # comment this out if you don't need the 'about' page.
 
 exclude:
